--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    No, but you have to provide at leas nickname and email so the organizer is able to contact you.
+                    No, but you have to provide at least nickname and email so the organizer is able to contact you.
                   </div>
                 </div>
               </div>
